Fixed text overflow in Welcome

--- a/welcome/ui/main.reel/main.css
+++ b/welcome/ui/main.reel/main.css
@@ -1,19 +1,77 @@
+
+/* Window size: ~ 900x540 */
+
 .Welcome {
     display: -webkit-flex;
-    -webkit-flex-direction: row;
     height: 100%;
-    padding: 50px;
+    padding: 40px;
     text-shadow: 0 1px 0 hsla(0,0%,100%,.5);
     background: hsl(0,0%,95%);
     -webkit-user-select: none;
     cursor: default;
 }
 
-.Launcher {
-    -webkit-flex: .6;
+/* Intro --------------------------------- */
+
+.Intro {
+    -webkit-flex: 1;
     display: -webkit-flex;
     -webkit-flex-direction: column;
-    padding: 10px 20px;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
+    padding: 20px;
+}
+
+.Intro a,
+.Intro a:active {
+    text-decoration: none;
+    font-weight: bold;
+    color: hsl(0, 0%, 0%);
+}
+
+.Intro a:hover {
+    color: hsl(0, 0%, 30%);
+}
+
+.Intro-logo {
+    width: 180px;
+}
+
+.Intro-version {
+    font-size: 11px;
+    color: hsl(0, 0%, 70%);
+    text-align: center;
+    -webkit-user-select: text;
+    cursor: text;
+}
+
+.Intro-title {
+    margin: 20px 0;
+    font-size: 24px;
+}
+
+.Intro-help {
+    max-width: 400px;
+    margin: 20px 0 0 0;
+    font-size: 13px;
+    color: hsl(0, 0%, 40%);
+}
+
+.Intro-meta {
+    font-size: 11px;
+    color: hsl(0, 0%, 70%);
+    text-align: center;
+}
+
+
+/* Launcher --------------------------------- */
+
+.Launcher {
+    -webkit-flex: 1;
+    max-width: 340px;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    padding: 20px;
 }
 
 .Launcher-section {
@@ -38,17 +96,10 @@
     margin: auto;
 }
 
-.New-controls {
-    display: -webkit-flex;
-}
-
-.New-input {
-    -webkit-flex: 1;
-}
-
 .New-button {
-    margin: 0 0 0 6px;
+    margin: 0;
 }
+
 
 /* List --------------------------------- */
 
@@ -63,7 +114,6 @@
 }
 
 .History-list {
-    -webkit-flex: 1;
     position: relative;
     margin: 0;
     padding: 0;
@@ -75,70 +125,24 @@
 }
 
 .History-list-item {
-    padding: 10px 20px;
+    padding: 8px 16px;
     font-size: 16px;
     line-height: 28px;
     border-top: 1px solid hsla(0, 0%, 100%, .5);
     border-bottom: 1px solid hsla(0, 0%, 0%, .1);
     background: hsl(0, 0%, 95%);
-    display: -webkit-flex;
-    cursor: pointer;
+    cursor: pointer;    
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .History-list-item:hover {
+    background: hsl(0, 0%, 97%);
+}
+
+.History-list-item:active {
     border-top: 1px solid hsla(0, 0%, 100%, .1);
     background: hsl(0, 0%, 90%);
-}
-
-.Intro {
-    -webkit-flex: 1;
-    display: -webkit-flex;
-    -webkit-flex-direction: column;
-    -webkit-align-items: center;
-    -webkit-justify-content: center;
-}
-
-.Intro a,
-.Intro a:active {
-    text-decoration: none;
-    font-weight: bold;
-    color: hsl(0, 0%, 0%);
-}
-
-.Intro a:hover {
-    color: hsl(0, 0%, 30%);
-}
-
-.Intro-box {
-    text-align: center;
-}
-
-.Intro-logo {
-    width: 180px;
-}
-
-.Intro-version {
-    font-size: 11px;
-    color: hsl(0, 0%, 70%);
-    text-align: center;
-    -webkit-user-select: text;
-    cursor: text;
-}
-
-.Intro-title {
-    margin: 80px 0;
-    font-size: 24px;
-}
-
-.Intro-help {
-    max-width: 400px;
-    margin: 20px 0 0 0;
-    font-size: 13px;
-    color: hsl(0, 0%, 40%);
-}
-
-.Intro-meta {
-    font-size: 11px;
-    color: hsl(0, 0%, 70%);
-    text-align: center;
 }
